# MiraETS

./: .clang-format  .gitignore  .output.txt  CMakeLists.txt  README.md  Style.md
benchmarks/: CMakeLists.txt  ECSBenchmarks.cpp  MovableBenchmarks.cpp  ObserverBenchmarks.cpp  PrefabBenchmarks.cpp  SerializationBenchmarks.cpp  SparseSetBenchmarks.cpp  SystemSchedulerBenchmarks.cpp  TagComponentBenchmarks.cpp  TraitsBenchmarks.cpp  WorldBenchmarks.cpp
cmake/: MiraETSConfig.cmake.in
examples/: CMakeLists.txt
examples/01_ECS_Basics/: main.cpp
examples/02_Static_Polymorphism/: main.cpp
examples/03_Type_Erasure/: main.cpp
examples/04_Parallel_Systems/: main.cpp
examples/05_Custom_Traits/: main.cpp
examples/06_Observer_System/: main.cpp
examples/07_Serialization/: main.cpp
examples/08_Prefabs/: main.cpp
examples/09_Tags/: main.cpp
include/Mira/ETS/: ComponentMask.hpp  Concepts.hpp  Errors.hpp  Logger.hpp  Movable.hpp  Observer.hpp  Prefab.hpp  Serialization.hpp  SparseSet.hpp  SystemScheduler.hpp  ThreadPool.hpp  Traits.hpp  Version.hpp  World.hpp
src/Mira/ETS/: Logger.cpp  Movable.cpp  Prefab.cpp  Serialization.cpp  SystemScheduler.cpp  World.cpp
tests/: CMakeLists.txt  LoggerTests.cpp  MovableTests.cpp  ObserverTests.cpp  PrefabTests.cpp  SerializationTests.cpp  SparseSetTests.cpp  SystemSchedulerTests.cpp  TagComponentTests.cpp  TraitsTests.cpp  WorldTests.cpp
